# n-body-sim

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  init.sh
.github/: LICENSE  README.md
data/: 1000_galaxy.csv  1500_galaxy.csv  2000_galaxy.csv  2400_spiral_galaxy.csv  2500_galaxy.csv  2_body.csv  2a_body.csv  3000_galaxy.csv  4_body.csv  500_galaxy.csv  galaxy_rotation.csv  random.csv
include/: ApplicationWindow.hpp  BarnesHutSimulator.hpp  Body.hpp  DataParser.hpp  DirectSimulator.hpp  Globals.hpp  Quadtree.hpp  QuadtreeNode.hpp  ResultsLogger.hpp  Simulator.hpp  Solver.hpp  globals.hpp  params.hpp
simulation/: SimulationGUI.cpp  SimulationNoGUI.cpp
simulator/: SimulatorGUI.cpp
src/: ApplicationWindow.cpp  BarnesHutSimulator.cpp  Body.cpp  DataParser.cpp  DirectSimulator.cpp  Globals.cpp  QuadtreeNode.cpp  ResultsLogger.cpp  Simulator.cpp  Solver.cpp  main.cpp
